tests/compile-fail/mut_self_for_immutable_ref.stderr
error: the trait `Foo` cannot be auto-implemented for immutable references, because this method has a `&mut self` receiver
 --> tests/compile-fail/mut_self_for_immutable_ref.rs:6:5
  |
6 |     fn foo(&mut self);
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: only `&self` and no receiver are allowed
